fix nav bar and spacing

--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 html, body { 
     background-color: white;
 margin: 0 auto;
-
 font-family: 'Roboto', sans-serif;
+font-size: 13px;
 }
 
 
@@ -16,6 +16,7 @@ header ul {
     list-style-type: none;
     text-decoration: none;
     color: #202020;
+  
 }
 button {
     padding: 10px 10px;
@@ -27,28 +28,37 @@ button {
 }
 header li { 
     display: inline-block;
-    padding: 10px 10px;
-    
-
  }
 
-
-p a {
-    margin: 0 auto;
-    align-items: center;
-    width: 100%;
+nav { 
+    display: flex;
+    justify-content: space-between;
 }
+
 
 .main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 auto;
+    max-width: 600px;
+    line-height: ;
 }
-input[type=search] {
-    padding: 100px;
 
-    display: block;
-   
+.searchbar {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid gray;
+    border-radius: 20px;
+    height: 40px;
+    width: 595px;
+}
+.searchbar #searchbox {
+    height: 20px; 
+    width: 580px;
+    border: none;
+    outline: none;
+ 
 }
 input[type=submit] {
     border: none;
@@ -58,12 +68,12 @@ input[type=submit] {
     padding: 10px 14px;
     display: inline-block;
     width: 200px;
-    margin: 0 auto;
-
+   
 }
 
 .google-img { 
-    width: 200 px;
+    width: 280px;
+    height: 95px;
     margin: 0 auto;
     display: block;
 }
